--- a/CódigoFuente/BitacorasProduccion/Views/PolizaManual/Edit.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/PolizaManual/Edit.cshtml
@@ -333,13 +333,11 @@
                             </div>
 
                             <div class="form-group row">
+                                <!-- Capturista -->
                                 @Html.LabelFor(model => model.id_elaborador, new { @class = "control-label col-md-1" })
-                                <input type="text" class="form-control col-md-5" value="@Model.empleados2.ConcatNombre" readonly>
-                                @Html.ValidationMessageFor(model => model.id_elaborador, "", new { @class = "text-danger" })
-
+                                <input type="text" class="form-control col-md-5" value="@Model.empleados3.ConcatNombre" readonly>
                                 <!-- Fecha validadcion -->
                                 @Html.LabelFor(model => model.fecha_creacion, new { @class = "control-label col-md-2 float-right" })
-
                                 <div class="col-md-4">
                                     <input type="text" class="form-control col-md-12" value="@(Model.fecha_creacion.Year > 2000 ? Model.fecha_creacion.ToString() : "NO DISPONIBLE" )" readonly>
                                 </div>
@@ -350,7 +348,7 @@
 
                                 @if (Model.id_validador.HasValue)
                                 {
-                                    <input type="text" class="form-control col-md-5" value="@Model.empleados3.ConcatNombre" readonly>
+                                    <input type="text" class="form-control col-md-5" value="@Model.empleados4.ConcatNombre" readonly>
                                 }
                                 else
                                 {
@@ -405,6 +403,34 @@
                                     }
                                 </div>
                             </div>
+                            if (Model.id_direccion.HasValue)
+                            {
+                                <div class="form-group row">
+                                    <!-- Dirección -->
+                                    @Html.LabelFor(model => model.id_direccion, new { @class = "control-label col-md-1" })
+
+                                    <input type="text" class="form-control col-md-5" value="@Model.empleados2.ConcatNombre" readonly>
+
+
+                                    <!-- Fecha registro -->
+                                    @Html.LabelFor(model => model.fecha_direccion, new { @class = "control-label col-md-2 float-right" })
+
+                                <div class="col-md-4">
+                                    @if (Model.fecha_direccion.HasValue)
+                                    {
+                                        <input type="text" class="form-control col-md-12" value="@Model.fecha_direccion.Value" readonly>
+                                    }
+                                    else if (Model.id_direccion.HasValue && Model.estatus == Bitacoras.Util.PM_Status.RECHAZADO_DIRECCION)
+                                    {
+                                        <input type="text" class="form-control col-md-12" value="RECHAZADO" readonly>
+                                    }
+                                    else
+                                    {
+                                        <input type="text" class="form-control col-md-12" value="NO DISPONIBLE" readonly>
+                                    }
+                                </div>
+                                </div>
+                            }
                             <div class="form-group row">
                                 <!-- Contabilidad -->
                                 @Html.LabelFor(model => model.id_contabilidad, new { @class = "control-label col-md-1" })
@@ -426,6 +452,7 @@
                                     {
                                         <input type="text" class="form-control col-md-12" value="@Model.fecha_registro.Value" readonly>
                                     }
+
                                     else
                                     {
                                         <input type="text" class="form-control col-md-12" value="NO DISPONIBLE" readonly>
