--- a/CódigoFuente/BitacorasProduccion/Views/PolizaManual/Reportes.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/PolizaManual/Reportes.cshtml
@@ -155,125 +155,83 @@
                                     </div>
                                     @if (Model.Count() > 0)
                                     {
-                                <table id="datatable_1" class="table table-striped table-bordered nowrap" cellspacing="0" width="100%">
-                                    <thead>
-                                        <tr>
-                                            <th>Acciones</th>
-                                            <th>
-                                                @Html.DisplayNameFor(model => model.id)
-                                            </th>
-                                            <th>
-                                                @Html.DisplayNameFor(model => model.numero_documento_sap)
-                                            </th>
-                                            <th>
-                                                @Html.DisplayNameFor(model => model.descripcion_poliza)
-                                            </th>
-                                            <th>
-                                                @Html.DisplayNameFor(model => model.fecha_creacion)
-                                            </th>
-                                            <th>
-                                                @Html.DisplayNameFor(model => model.fecha_documento)
-                                            </th>
-                                            <th>
-                                                @Html.DisplayNameFor(model => model.fecha_validacion)
-                                            </th>
-                                            <th>
-                                                @Html.DisplayNameFor(model => model.fecha_autorizacion)
-                                            </th>
-                                            <th>
-                                                @Html.DisplayNameFor(model => model.estatus)
-                                            </th>
+                                        <table id="datatable_1" class="table table-striped table-bordered nowrap" cellspacing="0" width="100%">
+                                            <thead>
+                                                <tr>
+                                                    <th>Acciones</th>
+                                                    <th>
+                                                        @Html.DisplayNameFor(model => model.id)
+                                                    </th>
+                                                    <th>
+                                                        @Html.DisplayNameFor(model => model.numero_documento_sap)
+                                                    </th>
+                                                    <th>
+                                                        @Html.DisplayNameFor(model => model.descripcion_poliza)
+                                                    </th>
+                                                    <th>
+                                                        @Html.DisplayNameFor(model => model.fecha_creacion)
+                                                    </th>
+                                                    <th>
+                                                        @Html.DisplayNameFor(model => model.fecha_documento)
+                                                    </th>
+                                                    <th>
+                                                        @Html.DisplayNameFor(model => model.fecha_validacion)
+                                                    </th>
+                                                    <th>
+                                                        @Html.DisplayNameFor(model => model.fecha_autorizacion)
+                                                    </th>
+                                                    <th>
+                                                        @Html.DisplayNameFor(model => model.estatus)
+                                                    </th>
 
-                                            <th>
-                                                @Html.DisplayNameFor(model => model.id_elaborador)
-                                            </th>
+                                                    <th>
+                                                        @Html.DisplayNameFor(model => model.id_elaborador)
+                                                    </th>
 
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        @foreach (var item in Model)
-                                        {
-                                            <tr>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                @foreach (var item in Model)
+                                                {
+                                                    <tr>
 
-                                                <td>
-                                                    @if (ViewBag.Autorizar != null && ViewBag.Autorizar)
-                                                    {
-                                                        <a href="@Url.Action("AutorizarControlling", ViewBag.ControllerName, new { id = item.id })" class="btn btn-info " title="Autorizar/Rechazar">
-                                                            <i class="fa fa-check-circle-o"></i>
-                                                        </a>
-                                                    }
-                                                    @if (ViewBag.Validar != null && ViewBag.Validar)
-                                                    {
-                                                        <a href="@Url.Action("ValidarArea", ViewBag.ControllerName, new { id = item.id })" class="btn btn-success " title="Validar">
-                                                            <i class="fa fa-check-circle-o"></i>
-                                                        </a>
-                                                    }
-                                                    @if (ViewBag.Finalizar != null && ViewBag.Finalizar)
-                                                    {
-                                                        <a href="@Url.Action("FinalizarContabilidad", ViewBag.ControllerName, new { id = item.id })" class="btn btn-success " title="Finalizar">
-                                                            <i class="fa fa-list-alt"></i>
-                                                        </a>
-                                                    }
-                                                    @if (ViewBag.EditContabilidad != null && ViewBag.EditContabilidad)
-                                                    {
-                                                        <a href="@Url.Action("EditarContabilidad", ViewBag.ControllerName, new { id = item.id })" class="btn btn-success" title="Editar">
-                                                            <i class="fa fa-list-alt"></i>
-                                                        </a>
-                                                    }
-                                                    @if (ViewBag.Edit != null && ViewBag.Edit)
-                                                    {
-                                                        <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = item.id})" class="btn btn-success " title="Editar">
-                                                            <i class="fa fa-pencil-square-o"></i>
-                                                        </a>
-                                                    }
+                                                        <td>
+                                                            <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.id })" class="btn btn-secondary " title="Detalles">
+                                                                <i class="fa fa-info-circle"></i>
+                                                            </a>
+                                                        </td>
+                                                        <td style="text-align:center">
+                                                            @Html.DisplayFor(modelItem => item.id)
+                                                        </td>
+                                                        <td>
+                                                            @Html.DisplayFor(modelItem => item.numero_documento_sap)
+                                                        </td>
+                                                        <td>
+                                                            @Html.DisplayFor(modelItem => item.descripcion_poliza)
+                                                        </td>
+                                                        <td>
+                                                            @item.fecha_creacion
+                                                        </td>
+                                                        <td style="text-align:center">
+                                                            @Html.DisplayFor(modelItem => item.fecha_documento)
+                                                        </td>
+                                                        <td>
+                                                            @Html.DisplayFor(modelItem => item.fecha_validacion)
+                                                        </td>
+                                                        <td>
+                                                            @Html.DisplayFor(modelItem => item.fecha_autorizacion)
+                                                        </td>
+                                                        <td>
+                                                            @Bitacoras.Util.PM_Status.DescripcionStatus(item.estatus)
+                                                        </td>
+                                                        <td>
+                                                            @Html.DisplayFor(modelItem => item.empleados3.ConcatNombre)
+                                                        </td>
+                                                    </tr>
+                                                }
 
-                                                    @if (ViewBag.EnviarValidacion != null && ViewBag.EnviarValidacion)
-                                                    {
-                                                        <a href="@Url.Action("EnviarParaValidacion", ViewBag.ControllerName, new { id = item.id })" class="btn btn-info " title="Enviar">
-                                                            <i class="fa fa-send"></i>
-                                                        </a>
-                                                    }
-
-                                                    @if (ViewBag.Details != null && ViewBag.Details)
-                                                    {
-                                                        <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.id })" class="btn btn-secondary " title="Detalles">
-                                                            <i class="fa fa-info-circle"></i>
-                                                        </a>
-                                                    }
-
-                                                </td>
-                                                <td style="text-align:center">
-                                                    @Html.DisplayFor(modelItem => item.id)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.numero_documento_sap)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.descripcion_poliza)
-                                                </td>
-                                                <td>
-                                                    @item.fecha_creacion
-                                                </td>
-                                                <td style="text-align:center">
-                                                    @Html.DisplayFor(modelItem => item.fecha_documento)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.fecha_validacion)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.fecha_autorizacion)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.estatus)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.empleados2.ConcatNombre)
-                                                </td>
-                                            </tr>
-                                        }
-
-                                    </tbody>
-                                </table>
+                                            </tbody>
+                                        </table>
                                     }
                                     else
                                     {
