2022-02-04 Se agrega enlace a Manual de Usuario en PM

--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -285,6 +285,9 @@
                                                     </li>
                                                 }
 
+                                                <h3>Manual de Usuario</h3>
+                                                <li class="@(ViewBag.SegundoNivel == "PM_manual" ? "current-page" : null )"><a href="@Url.Action("ManualUsuario", "PolizaManual")" target="_blank">Manual de Usuarios</a></li>
+
                                             </ul>
 
                                         </li>
