2022-02-09 Se agrega filtro de numero docto sap a reportes PM

--- a/CódigoFuente/BitacorasProduccion/Views/PolizaManual/Create.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/PolizaManual/Create.cshtml
@@ -267,7 +267,7 @@
 
                                     <div class="input-group">
                                         <div class="custom-file">
-                                            @Html.TextBoxFor(m => m.PostedFileSoporte, new { @class = "custom-file-input", type = "file", @accept = ".xls,.xlsx,.png, .jpeg, .jpg, .pdf, .doc, .docx, .rar, .zip" })
+                                            @Html.TextBoxFor(m => m.PostedFileSoporte, new { @class = "custom-file-input", type = "file", @accept = ".xls,.xlsx,.png, .jpeg, .jpg, .pdf, .doc, .docx, .rar, .zip, .eml" })
                                             <label class="custom-file-label" for="PostedFileSoporte" style="text-align:left">Seleccione un archivo...</label>
                                         </div>
                                     </div>
