--- a/CódigoFuente/BitacorasProduccion/Views/PolizaManual/Reportes.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/PolizaManual/Reportes.cshtml
@@ -46,10 +46,10 @@
         fecha_documento_final = paginacionFiltros.ValoresQueryString["fecha_documento_final"].ToString();
     }
 
-    string status = string.Empty;
-    if (paginacionFiltros.ValoresQueryString["status"] != null)
+    string numero_documento_sap = string.Empty;
+    if (paginacionFiltros.ValoresQueryString["numero_documento_sap"] != null)
     {
-        status = paginacionFiltros.ValoresQueryString["status"].ToString();
+        numero_documento_sap = paginacionFiltros.ValoresQueryString["numero_documento_sap"].ToString();
     }
 
 }
@@ -114,6 +114,14 @@
                                                 <div class="col-md-3 col-sm-3 ">
                                                     @Html.DropDownList("clave_planta", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
                                                 </div>
+                                            </div>
+
+                                            <div class="form-group row ">
+                                                <label class="control-label col-md-2 col-sm-2" for="numero_documento_sap">Núm. documento SAP</label>
+                                                <div class="col-md-3 col-sm-3">
+                                                    <input type="text" class="form-control" name="numero_documento_sap" id="numero_documento_sap" value="@numero_documento_sap" autocomplete="off">
+                                                </div>
+                                              
                                             </div>
 
                                             <div class="form-group row ">
@@ -254,7 +262,7 @@
                                                     fecha_creacion_final = fecha_creacion_final,
                                                     fecha_documento_inicial = fecha_documento_inicial,
                                                     fecha_documento_final = fecha_documento_final,
-                                                    status = status,
+                                                    numero_documento_sap = numero_documento_sap,
 
                                                 })" class="btn btn-success btm-sm" target="_blank" title="Reporte">
                                                 <i class="fa fa-file-excel-o"></i> Exportar Excel
