2022-02-11 Se agrega selección de id_contabilidad

--- a/CódigoFuente/BitacorasProduccion/Views/PolizaManual/Create.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/PolizaManual/Create.cshtml
@@ -106,10 +106,10 @@
                                 </div>
                                 <!--Documento SAP-->
                                 @*@Html.LabelFor(model => model.numero_documento_sap, new { @class = "control-label col-md-2" })
-                                <div class="col-md-2">
-                                    @Html.EditorFor(m => m.numero_documento_sap, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
-                                    @Html.ValidationMessageFor(model => model.numero_documento_sap, "", new { @class = "text-danger" })
-                                </div>*@
+                <div class="col-md-2">
+                    @Html.EditorFor(m => m.numero_documento_sap, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                    @Html.ValidationMessageFor(model => model.numero_documento_sap, "", new { @class = "text-danger" })
+                </div>*@
                                 <!-- Id póliza -->
                                 <label class="control-label col-md-6 float-right">
                                     # P&oacute;liza
@@ -307,6 +307,30 @@
                                     @if (Model.fecha_validacion.HasValue)
                                     {
                                         <input type="text" class="form-control col-md-12" value="@Model.fecha_validacion.Value" readonly>
+                                    }
+                                    else
+                                    {
+                                        <input type="text" class="form-control col-md-12" value="NO DISPONIBLE" readonly>
+                                    }
+                                </div>
+
+                            </div>
+
+                            <div class="form-group row">
+                                <!-- Contabilidad -->
+                                @Html.LabelFor(model => model.id_contabilidad, new { @class = "control-label col-md-1" })
+                                <div class="col-md-5">
+                                    @Html.DropDownList("id_contabilidad", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                    @Html.ValidationMessageFor(model => model.id_contabilidad, "", new { @class = "text-danger" })
+                                </div>
+
+                                <!-- Fecha validadcion -->
+                                @Html.LabelFor(model => model.fecha_registro, new { @class = "control-label col-md-2 float-right" })
+
+                                <div class="col-md-4">
+                                    @if (Model.fecha_registro.HasValue)
+                                    {
+                                        <input type="text" class="form-control col-md-12" value="@Model.fecha_registro.Value" readonly>
                                     }
                                     else
                                     {
