--- a/CódigoFuente/BitacorasProduccion/Views/PolizaManual/EditarContabilidad.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/PolizaManual/EditarContabilidad.cshtml
@@ -417,6 +417,7 @@
                             @Html.HiddenFor(model => model.id)
                             @Html.HiddenFor(model => model.id_validador)
                             @Html.HiddenFor(model => model.descripcion_poliza)
+                            @Html.HiddenFor(model => model.id_contabilidad)
 
                             @* input para saber si está o no activo el campo de soporte *@
                             <input type="hidden" name="cambio_documento_soporte" id="cambio_documento_soporte" value="0" />
